--- a/task3/UI/index.html
+++ b/task3/UI/index.html
@@ -77,7 +77,7 @@
                         <div class="service__name" data-target="author"></div>
                         <div class="validity__info">
                             <div class="validity__info__text">Offer is valid until</div>
-                            <div data-target="validUntil"></div>
+                            <div data-target="validateUntil"></div>
                         </div>
                         <div class="description" data-target="description"></div>
                         <a href="" data-target="link">see more</a>
@@ -111,10 +111,10 @@
         </div>
     </div>
 </footer>
-<script src="scripts/script_task9.js"></script>
 <script src="scripts/PostModel.js"></script>
 <script src="scripts/PostView.js"></script>
 <script src="scripts/FeedView.js"></script>
 <script src="scripts/logic.js"></script>
+<script src="scripts/script_task9.js"></script>
 </body>
 </html>
