--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -13,9 +13,9 @@
     <div class="header__user__info">
         <div class="user_info">You are logged in as a <br>
             <div class="type-authorization">
-                <b>Guest</b>
+                <b id="user-name">Guest</b>
             </div>
-            <button class="login-button">Log in</button>
+            <button id="login-button" class="login-button">Log in</button>
         </div>
         <div class="user__img"><img src="img/guest_icon.png" alt=""/></div>
     </div>
