--- a/task8/src/main/webapp/index.html
+++ b/task8/src/main/webapp/index.html
@@ -215,6 +215,13 @@
         </div>
     </div>
 </template>
+<template id="error-modal-template">
+    <div class="modal-content">
+        <span class="close">×</span>
+        <h1 class="modal-text">Error</h1>
+        <div class="text-error"></div>
+    </div>
+</template>
 <template id="edit-modal-template">
     <div class="modal-content-edit">
         <span class="close">×</span>
@@ -251,7 +258,7 @@
         </form>
     </div>
 </template>
-<script src="resources/scripts/PostModel.js"></script>
+<script src="resources/scripts/PostService.js"></script>
 <script src="resources/scripts/PostView.js"></script>
 <script src="resources/scripts/FeedView.js"></script>
 <script src="resources/scripts/UsersCollection.js"></script>
