--- a/task8/src/main/webapp/index.html
+++ b/task8/src/main/webapp/index.html
@@ -225,7 +225,7 @@
                 <div class="first-post-raw">
                     <div class="first-post-column">
                         <div id="edit-file-preview" class="file-preview"></div>
-                        <div class="file">
+                        <div class="file-photo">
                             <p class="file-warning"></p>
                             <input id="edit-img-file" accept=".img, .jpg, .png" type="file" name="image"
                                    class="input-file"
@@ -252,13 +252,13 @@
     </div>
 </template>
 <script src="resources/scripts/PostService.js"></script>
-<script src="resources/scripts/PostView.js"></script>
-<script src="resources/scripts/FeedView.js"></script>
 <script src="resources/scripts/UsersService.js"></script>
+<script src="resources/scripts/PostView.js"></script>
 <script src="resources/scripts/modals.js"></script>
 <script src="resources/scripts/AddPostEvent.js"></script>
 <script src="resources/scripts/CommentEvent.js"></script>
-<script src="resources/scripts/feedEvents.js"></script>
 <script src="resources/scripts/postEvents.js"></script>
+<script src="resources/scripts/FeedView.js"></script>
+<script src="resources/scripts/feedEvents.js"></script>
 </body>
 </html>
