--- a/task8/src/main/webapp/index.html
+++ b/task8/src/main/webapp/index.html
@@ -30,7 +30,7 @@
 <main class="main">
     <div class="section-filter">
         <form id="filter">
-            <div class="filter-title">Post filters</div>
+            <div class="filter-title">entities.Post filters</div>
             <div class="date-filter">
                 Date
                 <div class="createdAt">
